--- a/templates/index.html
+++ b/templates/index.html
@@ -5,7 +5,16 @@
 
 {% block page_content %}
 <div class="page-header">
-    <h1>Hello, {% if name %}{{ name }}{% else %}Stranger{% endif %}!</h1>
+    {% if name %}
+    <h1>Hello, {{ name }}!</h1>
+    {% if email %}
+    <h1>Your UofT email is {{ email }}</h1>
+    {% else %} 
+    <h1>Please use your UofT email.</h1>
+    {% endif %}
+    {% else %}
+    <h1>Hello, Stranger!</h1>
+    {% endif %}
 </div>
 {{ wtf.quick_form(form) }}
 {% endblock %}
